# jerk-click

./: .eslintrc.js  .gitignore  .yamllint  CHANGELOG.md  CMakeLists.txt  README.md  clickable.yaml  commitlint.config.js  package-lock.json  release-rules.js  release.config.js
click/: CMakeLists.txt  jerk-click.apparmor  manifest.json.in
cmake/: Click.cmake
data/: jerk-click.kugiigi.desktop.in.in
po/: CMakeLists.txt  ar.po  ca.po  cs.po  de.po  es.po  fi.po  fr.po  gl.po  it.po  jerk-click.kugiigi.pot  jerk-click.pot  nb.po  nl.po  pl.po  pt.po  ru.po  th.po  ug.po  uk.po  zh_CN.po
src/app/: CMakeLists.txt
src/app/qml/: main.qml
src/app/qml/aboutTab/: AboutPage.qml
src/app/qml/actionsTab/: ActionsTab.qml
src/app/qml/components/: BaseBackgroundRectangle.qml  EmptyState.qml  FilePickerPage.qml  Functions.js  InstallerActionsItem.qml  ListItemHeader.qml  ListViewEndShadow.qml  ScreenshotsList.qml  SettingsCheckBox.qml  SettingsSwitch.qml
src/app/qml/components/Dialogs/: FileChooserDialog.qml
src/app/qml/components/ListItems/: AppLauncher.qml  Application.qml  Base.qml  Button.qml  Control.qml  Link.qml  OptionSelector.qml  Page.qml  SectionDivider.qml  SingleValue.qml  Warning.qml
src/app/qml/components/Upstream/: MultipleSelectionListView.qml
src/app/qml/installerTab/: InstallerTab.qml  PackagePage.qml
src/app/qml/js/: shell.js
src/app/qml/settingsTab/: SettingsTab.qml
src/plugin/pamauthentication/: AuthenticationDialog.qml  AuthenticationService.qml  NotifyDialog.qml  pamauthentication.cpp
src/plugin/tweaktool/: applicationsmodel.cpp  clickinstaller.cpp  desktopfileutils.cpp  desktopfileutils.h  packagesmodel.cpp  singleprocess.cpp  singleprocess.h
